tests/snapshots/generator_tests__generate_membership_check_model.snap
---
source: tests/generator_tests.rs
expression: model.model().trim()
---
model
  schema 1.1

type user

type projects
  relations
    define no_access: [user]
    define teams: [teams]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: member from teams
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type teams
  relations
    define member: [user]
