tests/snapshots/generator_tests__generate_membership_check_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(&tuples)"
---
SET TIME ZONE 'UTC';
SET DateStyle = 'ISO, MDY';
SET bytea_output = 'hex';

-- teams membership from team_members
SELECT 'teams:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END AS object, 'member' AS relation, 'user:' || CASE WHEN "user_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "user_id"::text ELSE '~' || encode(convert_to("user_id"::text, 'UTF8'), 'hex') END AS subject
FROM "team_members"
WHERE "team_id" IS NOT NULL AND "user_id" IS NOT NULL;

-- projects to teams bridge for tuple-to-userset
SELECT 'projects:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'teams' AS relation, 'teams:' || CASE WHEN "team_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "team_id"::text ELSE '~' || encode(convert_to("team_id"::text, 'UTF8'), 'hex') END AS subject
FROM "projects"
WHERE "id" IS NOT NULL
AND "team_id" IS NOT NULL;
