tests/snapshots/generator_tests__generate_parent_inheritance_model.snap
---
source: tests/generator_tests.rs
expression: model.model().trim()
---
model
  schema 1.1

type user

type nobody

type projects
  relations
    define no_access: [nobody]
    define owner: [user]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: owner
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type tasks
  relations
    define no_access: [nobody]
    define projects: [projects]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: owner from projects
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update
