tests/snapshots/generator_tests__generate_parent_inheritance_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(tuples)"
---
SET TIME ZONE 'UTC';
SET DateStyle = 'ISO, MDY';
SET bytea_output = 'hex';

-- User ownership (owner_id references users)
SELECT 'projects:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner' AS relation, 'user:' || CASE WHEN "owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner_id"::text ELSE '~' || encode(convert_to("owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "public"."projects"
WHERE "owner_id" IS NOT NULL
AND "id" IS NOT NULL
AND octet_length('user:' || CASE WHEN "owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner_id"::text ELSE '~' || encode(convert_to("owner_id"::text, 'UTF8'), 'hex') END) <= 512;

-- public.tasks to projects bridge for tuple-to-userset
SELECT 'tasks:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'projects' AS relation, 'projects:' || CASE WHEN "project_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "project_id"::text ELSE '~' || encode(convert_to("project_id"::text, 'UTF8'), 'hex') END AS subject
FROM "public"."tasks"
WHERE "id" IS NOT NULL
AND "project_id" IS NOT NULL;
