tests/snapshots/generator_tests__generate_shared_policy_name_tuples.snap
---
source: tests/generator_tests.rs
assertion_line: 28
expression: "tuple_generator::format_tuples(outputs.tuple_queries())"
---
SET TIME ZONE 'UTC';
SET DateStyle = 'ISO, MDY';
SET bytea_output = 'hex';

-- Request-time gate on starts_at, evaluated by condition when_starts_at_request_time_67edcc4e
SELECT 'campaigns:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'gate_visible_now_7dce72fa' AS relation, 'user:*' AS subject,
  'when_starts_at_request_time_67edcc4e' AS condition, jsonb_build_object('starts_at', "starts_at") AS context
FROM "public"."campaigns"
WHERE "id" IS NOT NULL AND length('campaigns:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END) <= 256
AND "starts_at" IS NOT NULL;

-- Request-time gate on lifts_at, evaluated by condition when_lifts_at_request_time_7b4d538f
SELECT 'embargoes:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'gate_visible_now_7dce72fa' AS relation, 'user:*' AS subject,
  'when_lifts_at_request_time_7b4d538f' AS condition, jsonb_build_object('lifts_at', "lifts_at") AS context
FROM "public"."embargoes"
WHERE "id" IS NOT NULL AND length('embargoes:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END) <= 256
AND "lifts_at" IS NOT NULL;
